traces/bug_74.txt
examples++-load/Element_Mixte3d.cpp:59: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::TypeOfFE_Edge1_3d::QFf accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/Element_Mixte3d.cpp:59:5: initialization of Fem2D::TypeOfFE_Edge1_3d::QFf
57.           GQuadraturePoint<R2>(1./3.,R2(4./6.,1./6.)) ,
58.           GQuadraturePoint<R2>(1./3.,R2(1./6.,1./6.)) };
59.       const GQuadratureFormular<R2> TypeOfFE_Edge1_3d:: QFf(2,3,P_QuadratureFormular_T_2_intp);
          ^
60.       
61.       // In Mesh3dn.cpp:

examples++-load/Element_Mixte3d.cpp:59:55: call to Fem2D::GQuadratureFormular<Fem2D::R2>_GQuadratureFormular
57.           GQuadraturePoint<R2>(1./3.,R2(4./6.,1./6.)) ,
58.           GQuadraturePoint<R2>(1./3.,R2(1./6.,1./6.)) };
59.       const GQuadratureFormular<R2> TypeOfFE_Edge1_3d:: QFf(2,3,P_QuadratureFormular_T_2_intp);
                                                            ^
60.       
61.       // In Mesh3dn.cpp:

src/femlib/QuadratureFormular.hpp:85:51: call to Fem2D::GQuadratureFormular<Fem2D::R2>_Verification
  83.     void Verification(); // for verification 
  84.     GQuadratureFormular (int e,int NbOfNodes,QuadraturePoint *pp,bool c=false)
  85.    :exact(e), n(NbOfNodes),size(n),p(pp),clean(c)  {Verification();}
                                                          ^
  86.     GQuadratureFormular (int e,int NbOfNodes,const QuadraturePoint *pp,bool c=false)
  87.    :exact(e),n(NbOfNodes),p(pp),clean(c)   {Verification();}

src/femlib/QuadratureFormular.cpp:665:4: access to std::cout|
  663.         if (err>tol)
  664.   	{
  665.   	  cerr << " d= " << d << "T Ordre= " << k << " d!k!/(d+k)!= " << se << " " ;
            ^
  666.   	  for(int l=0;l<=d;++l)
  667.   	    cerr << sa[l] << " ";
